--- a/santa2.ipynb
+++ b/santa2.ipynb
@@ -24,9 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "path = 'e:/data/kaggle/santa2/'\n",
-    "\n",
-    "nodes = pd.read_csv(path + 'problem/cities.csv')\n",
+    "nodes = pd.read_csv('./problem/cities.csv')\n",
     "nodes = nodes.iloc[:,1:].values\n",
     "n = len(nodes)\n",
     "prime_ = sieve.primerange(0,n)\n",
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -71,19 +69,19 @@
        "1516912.3751145517"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution = pd.read_csv(path+'solution/base.csv').values[:,0]\n",
-    "score(solution,False).sum()"
+    "solution = pd.read_csv('./solution/base.csv').values[:,0]\n",
+    "score(solution).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -92,12 +90,25 @@
     "r_solution = solution[-2:0:-1]\n",
     "reverse_dist = []\n",
     "for offset in range(10):\n",
-    "    reverse_dist.append(np.cumsum(score(r_solution,offset)[::-1])[::-1])"
+    "    reverse_dist.append(np.cumsum(score(r_solution,offset)[::-1])[::-1])\n",
+    "reverse_dist = np.array(reverse_dist)\n",
+    "loop = reverse_dist.shape[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dist = np.cumsum(score(solution))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -106,40 +117,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30.99500012397766\n"
+      "6.107999801635742\n"
      ]
     }
    ],
    "source": [
+    "asd = []\n",
     "start = time.time()\n",
-    "for left in range(19000):\n",
-    "    node_a = solution[left+1]\n",
+    "for left in range(1900):\n",
+    "    node_before_a, node_a = solution[left:left+2]\n",
     "    offset = (left+1)%10\n",
     "    middle = np.zeros(shape=(n-2-left))\n",
     "    for o in range(10):\n",
     "        order = (offset-o)%10\n",
     "        using_reverse = reverse_dist[order][:n-2-left]\n",
     "        middle[o::10] = using_reverse[o::10]\n",
+    "    reverse_dist[:,:loop-left-1] -= reverse_dist[:,loop-left-1:loop-left]\n",
+    "    asd.append(middle[0])\n",
+    "    \n",
+    "    old_dist = dist[left+2:]\n",
+    "    \n",
+    "    dist[left+1:] -= dist[left]\n",
     "print(time.time()-start)       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8.71387618,  7.24548268,  5.9463006 ,  7.49827218,  8.53004849,\n",
+       "        8.84179965, 17.95567891, 26.50275793, 33.26565234, 39.7231002 ])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist[:10]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8.71387618, 15.95935886, 21.90565946, 29.40393164, 37.93398013,\n",
+       "       46.77577979, 55.88965904, 64.43673807, 71.19963247, 77.65708034])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist[:10]"
+   ]
   },
   {
    "cell_type": "code",
